# VibeUB

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
docs/: modules.md
vibe/: __main__.py  bootstrap.py  config.py  i18n.py  logging.py  main.py
vibe/core/: __init__.py  botfather.py  context.py  inline.py  loader.py  module.py  utils.py
vibe/langpacks/: __init__.py  en.py  ru.py
vibe/modules/: __init__.py  config.py  help.py  info.py  inline.py  loader.py  ping.py  prefix.py  system.py
